# bookstore

./: .gitignore  .slugignore  Dockerfile  Procfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements-ci.txt  requirements.in  requirements.txt  runtime.txt
.github/workflows/: build.yml  heroku-deploy.yml  workflow-pr.yaml
OpenCl_Docker/: Dockerfile
bookstore/: db.sqlite3  pyproject.toml  settings.py  urls.py
bookstore/bookstore/: settings.py
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py  0002_category_active_alter_category_description.py
product/models/: category.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
